2008-08-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am: No BSP should use exit.c as a file name. exit() is POSIX
	routine.

2008-06-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, preinstall.am: Need tm27.h

2008-05-14	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Rework to avoid .rel files.

2008-05-07	Joel Sherrill <joel.sherrill@OARcorp.com>

	* .cvsignore: New file.

2008-05-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am: Use shared bsp_predriver_hook.

2008-05-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h: Grammar.

2008-05-06	Ray Xu <rayx.cn@gmail.com>

	* ChangeLog, Makefile.am, README, bsp_specs, configure.ac,
	preinstall.am, include/bsp.h, include/bspopts.h.in, startup/linkcmds,
	startup/memmap.c: New files.

2008-04-06	Ray Xu	<rayx.cn@gmail.com>

	* Add note in README, cleanup code, merge it with gp32 and submit it to RTEMS

2007-10-12	ZhangZhiMin <paopaoerzhang@gmail.com>

	* Fix clock defect, verified BSP on skyeye

2007-08-06	XiaJiaShan <ximenpiaoxue4016@sina.com>

	* Frist draft, port from GBA BSP, add console, ethernet driver
