@@ -28,7 +28,9 @@ dist_project_lib_DATA += startup/linkcmds
 startup_SOURCES = ../../shared/bsplibc.c ../../shared/bsppost.c \
     ../gp32/startup/bspstart.c ../gp32/startup/bspclean.c startup/memmap.c \
     ../../shared/bootcard.c ../../shared/sbrk.c \
-    ../../shared/bsppredriverhook.c ../../shared/gnatinstallhandler.c
+    ../../shared/bsppretaskinghook.c  \
+    ../../shared/bsppredriverhook.c ../shared/bspgetworkarea.c \
+    ../../shared/gnatinstallhandler.c
 console_SOURCES = ../gp32/console/uart.c ../../shared/console.c
 abort_SOURCES = ../shared/abort/abort.c
 smc_SOURCES = ../gp32/smc/smc.c ../gp32/smc/smc.h
